@@ -6,7 +6,6 @@ Release: 1
 License: GPL v2
 Group: Utilities/System
 Vendor: nording
-Packager: John Van Ostrand <john@netdirect.ca>
 BuildRoot: /var/tmp/%{name}-%{version}
 Source: %{name}-%{version}.tar.gz
 
@@ -15,7 +14,7 @@ pcapsipdump is a tool for dumping SIP sessions (+RTP
 traffic, if available) to disk in a fashion similar
 to "tcpdump -w" (format is exactly the same), but one
 file per sip session (even if there is thousands of
-concurrect SIP sessions).
+concurrent SIP sessions).
 
 %prep
 %setup
